2005-03-01  Derek Scherger  <derek@echologic.com>

	* app_state.cc (set_restriction): actually ignore ignored files
	rather than trying to validate them

2005-03-01  Derek Scherger  <derek@echologic.com>

	* tests/t_diff_binary.at: new test (bug report)
	* tests/t_command_completion.at: new test
	* tests/t_merge_rename_file_and_rename_dir.at: new test
	* testsuite.at: include new tests
	
2005-02-28  Richard Levitte  <richard@levitte.org>

	* Makefile.am (BUILT_SOURCES_CLEAN): Moved mt-stding.h from here...
	(DISTCLEANFILES): ... to here.  Since mt-stding.h is created by
	config.status, it should only be removed by the distclean target.

2005-02-28  Matt Johnston  <matt@ucc.asn.au>

	* std_hooks.lua: posix.iswin32() == 1, rather than plain boolean
	comparison (0 doesn't compare as false in lua it seems).

2005-02-27  Jon Bright  <jon@siliconcircus.com>
	* lposix.c (win32 Pspawn): Search the path
	(win32 Pexistsonpath): Added.  'which' isn't easily available,
	and not available at all from a normal Win32 command shell
	(Piswin32): Added a function for both Unix and Win32 to detect
	if running on Windows
	* std_hooks.lua (program_exists_in_path): Now calls 
	posix.iswin32.  If win32, calls posix.existsonpath, otherwise
	calls which as it always did.

2005-02-27  Jon Bright  <jon@siliconcircus.com>
	* lposix.c (win32 Pspawn): Remove dumb strlen bug resulting in
	AVs on commit.

2005-02-27  Jon Bright  <jon@siliconcircus.com>
	* t_can_execute.at: Test to see if hooks can execute things
	* testsuite.at: Add t_can_execute

2005-02-27  Jon Bright  <jon@siliconcircus.com>
	* lposix.c (win32 Pspawn): Ensure the command string is always
	NUL-terminated.  Also, allocate enough memory for the quotes
	around the command string.

2005-02-27  Jon Bright  <jon@siliconcircus.com>
	* xdelta.cc (unittests): Define BOOST_STDC_NO_NAMESPACE, needed
	to compile with the latest MinGW which uses gcc 3.4.2
	* vocab.cc (verify(local_path)): Catch fs::filesystem_error too